syntax = "proto3";

option go_package = ".;port_domain";

service PortDomain {
  rpc UpsertPort(Port) returns (UpsertPortResponse) {}
  rpc GetPort (GetPortRequest) returns (GetPortResponse) {}
}

message Port {
  string name = 1;
  string city = 2;
  string country = 3;
  repeated string alias = 4;
  repeated string regions = 5;
  repeated float  coordinates = 6;
  string province = 7;
  string timezone = 8;
  repeated string unlocs = 9;
  string code = 10;
}

message UpsertPortResponse {
}

message GetPortRequest {
  string id = 1;
}

message GetPortResponse {
  Port port = 1;
}
